// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<MagicSpells /> renders 1`] = `
<Styled(styled.div)
  columns={1}
>
  <SpellListHeading />
</Styled(styled.div)>
`;

exports[`<MagicSpells /> renders with grid props 1`] = `
<Styled(styled.div)
  columns={3}
  gridArea="testArea"
>
  <SpellListHeading />
</Styled(styled.div)>
`;

exports[`<MagicSpells /> renders with props 1`] = `
<Styled(styled.div)
  columns={1}
>
  <SpellListHeading
    slotExtended={2}
    slotTotal={3}
    spellLevel={1}
  />
</Styled(styled.div)>
`;
